# procon-lg

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: countdown.rs  custom_fmt.rs  fib.rs  gcd.rs  generics.rs  multiline_test.rs  mutual_recursion.rs  no_debug.rs  no_print.rs  ptr.rs  pub_fn.rs  recursion_limit.rs  sum.rs  unsafe_fn.rs
procon-lg/: Cargo.toml
procon-lg-macros/: Cargo.toml
procon-lg-macros/src/: arg_attrs.rs  codegen.rs  lib.rs  macro_args.rs  visitor.rs
procon-lg/examples/: countdown.rs  custom_fmt.rs  early_return.rs  fib.rs  gcd.rs  generics.rs  multiline_test.rs  mutual_recursion.rs  no_debug.rs  ptr.rs  pub_fn.rs  recursion_limit.rs  self_and_return.rs  sum.rs  unsafe_fn.rs
procon-lg/src/: lib.rs
scripts/: run_examples.sh  test_examples.sh  update_test_outputs.sh
src/: arg_attrs.rs  args.rs  attributes.rs  codegen.rs  lib.rs  utils.rs  visitor.rs
tests/expected_outputs/: countdown.out  custom_fmt.out  early_return.out  fib.out  gcd.out  generics.out  multiline_test.out  mutual_recursion.out  no_debug.out  ptr.out  pub_fn.out  recursion_limit.out  self_and_return.out  sum.out  unsafe_fn.out
