[package]
name = "procon-lg"
version = "0.1.0"
edition = "2021"

[dependencies]
procon-lg-macros = { path = "../procon-lg-macros" }

[[example]]
name = "countdown"
path = "../examples/countdown.rs"

[[example]]
name = "custom_fmt"
path = "../examples/custom_fmt.rs"

[[example]]
name = "fib"
path = "../examples/fib.rs"

[[example]]
name = "gcd"
path = "../examples/gcd.rs"

[[example]]
name = "generics"
path = "../examples/generics.rs"

[[example]]
name = "multiline_test"
path = "../examples/multiline_test.rs"

[[example]]
name = "mutual_recursion"
path = "../examples/mutual_recursion.rs"

[[example]]
name = "no_debug"
path = "../examples/no_debug.rs"

[[example]]
name = "ptr"
path = "../examples/ptr.rs"

[[example]]
name = "pub_fn"
path = "../examples/pub_fn.rs"

[[example]]
name = "recursion_limit"
path = "../examples/recursion_limit.rs"

[[example]]
name = "sum"
path = "../examples/sum.rs"

[[example]]
name = "unsafe_fn"
path = "../examples/unsafe_fn.rs"
